apps/qr-web/qr-web-deoly.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: qr-web
  name: qr-web
  namespace: homelab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qr-web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: qr-web
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Asia/Riyadh
          image: nginx:alpine
          name: qr-web
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: qrweb-mount-pvc
            - mountPath: /etc/localtime
              name: qr-web-hostpath1
              readOnly: true
            - mountPath: /etc/timezone
              name: qr-web-hostpath2
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: qrweb-mount-pvc
          persistentVolumeClaim: 
            claimName: qrweb-pvc
        - hostPath:
            path: /etc/localtime
          name: qr-web-hostpath1
        - hostPath:
            path: /etc/timezone
          name: qr-web-hostpath2
status: {}
