apps/qr-web/qr-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: qr-web
  name: qr-web
  namespace: homelab
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: qr-web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/hasan-mynetwork: "true"
        io.kompose.service: qr-web
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Asia/Riyadh
          image: nginx:alpine
          name: qr-web
          ports:
            - containerPort: 80
              hostPort: 9008
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: qr-web-hostpath0
            - mountPath: /etc/localtime
              name: qr-web-hostpath1
              readOnly: true
            - mountPath: /etc/timezone
              name: qr-web-hostpath2
              readOnly: true
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /srv/docker/qr
          name: qr-web-hostpath0
        - hostPath:
            path: /etc/localtime
          name: qr-web-hostpath1
        - hostPath:
            path: /etc/timezone
          name: qr-web-hostpath2
status: {}
