apps/qr-web/qr-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: qr-web
  name: qr-web
  namespace: homelab
spec:
  ports:
    - name: "9008"
      port: 9008
      targetPort: 80
  selector:
    io.kompose.service: qr-web
status:
  loadBalancer: {}
