apps/qr-web/qr-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qr-web-ingress
  namespace: homelab
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: qr.drnull.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qr-web
                port:
                  number: 80
  tls:
    - hosts:
        - qr.drnull.site
      secretName: qr-drnull-site-tls
